cleanup and more tests